[gd_scene load_steps=5 format=3 uid="uid://flrp62ecrwtl"]

[ext_resource type="Script" path="res://obstacle.gd" id="1_vxne2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wr4bp"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ra60t"]
load_path = "res://.godot/imported/tile_0006.png-032b46da9760b91fd99cabd617a39ad9.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xb0ji"]
size = Vector2(22, 23)

[node name="Obstacle" type="CharacterBody2D"]
script = ExtResource("1_vxne2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_wr4bp")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("CompressedTexture2D_ra60t")

[node name="VisibleNotifier" type="VisibleOnScreenNotifier2D" parent="."]

[node name="DeathTimer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_xb0ji")

[connection signal="screen_exited" from="VisibleNotifier" to="." method="_on_visible_notifier_screen_exited"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
